kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: other
spec:
  selector:
    app: other
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
